week-4/day-4/yaml-practice/block4/dply.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: shop-backend
  name: shop-backend
  namespace: shop
spec:
  replicas: 2
  selector:
    matchLabels:
      app: shop-backend
  strategy: {}
  template:
    metadata:
      labels:
        app: shop-backend
        tier: backend
    spec:
      containers:
      - image: nginx:1.21
        name: nginx
