week-4/day-4/yaml-practice/block4/svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: shop-backend-svc
  name: shop-backend-svc
  namespace: shop
spec:
  ports:
  - name: 80-80
    port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: shop-backend
  type: ClusterIP
status:
  loadBalancer: {}
